test/corpus/wfl.txt
==================
Anti Join And Test Options
==================

rule anti_join_rule {
  events { e : auth_events && startswith(e.action, "fail") }
  match<e.sip:5m> {
    on event { e.action | distinct | count >= 2; }
  } -> score(if e.action == "failed" then 90 else 10)
  join scanner_whitelist anti on e.sip == scanner_whitelist.sip
  entity(ip, e.sip)
  yield alerts@v1 (
    risk = @score,
    actions = collect_set(e.action),
    action_count = mvcount(collect_set(e.action))
  )
  limits { max_instances = 100; on_exceed = throttle; }
}

test anti_join_case for anti_join_rule {
  input {
    row(e, sip = "10.0.0.1", action = "failed");
    tick(5m);
  }
  expect { hits >= 0; }
  options {
    close_trigger = timeout;
    eval_mode = strict;
    permutation = shuffle;
    runs = 20;
  }
}

---

(source_file
  (rule_declaration
    (identifier)
    (events_block
      (event_declaration
        (identifier)
        (identifier)
        (expression
          (primary
            (function_call
              (identifier)
              (expression
                (primary
                  (field_reference
                    (identifier)
                    (identifier))))
              (expression
                (primary
                  (string))))))))
    (rule_flow
      (stage_chain
        (final_stage
          (match_clause
            (match_params
              (field_reference
                (identifier)
                (identifier))
              (window_spec
                (duration)))
            (on_event_block
              (match_step
                (step_branch
                  (source_expression
                    (identifier)
                    (identifier))
                  (pipe_chain
                    (transform)
                    (measure)
                    (comparison_operator)
                    (primary
                      (number)))))))
          (score_call
            (expression
              (if_expression
                (expression
                  (binary_expression
                    (expression
                      (primary
                        (field_reference
                          (identifier)
                          (identifier))))
                    (comparison_operator)
                    (expression
                      (primary
                        (string)))))
                (expression
                  (primary
                    (number)))
                (expression
                  (primary
                    (number))))))
          (join_clause
            (identifier)
            (join_mode)
            (join_condition
              (field_reference
                (identifier)
                (identifier))
              (field_reference
                (identifier)
                (identifier)))))))
    (entity_clause
      (identifier)
      (expression
        (primary
          (field_reference
            (identifier)
            (identifier)))))
    (yield_clause
      (yield_target
        (identifier)
        (version_tag))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (derive_reference))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (function_call
              (identifier)
              (expression
                (primary
                  (field_reference
                    (identifier)
                    (identifier))))))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (function_call
              (identifier)
              (expression
                (primary
                  (function_call
                    (identifier)
                    (expression
                      (primary
                        (field_reference
                          (identifier)
                          (identifier))))))))))))
    (limits_clause
      (limit_item
        (number))
      (limit_item
        (identifier))))
  (test_block
    (identifier)
    (identifier)
    (input_block
      (input_statement
        (identifier)
        (field_assignment
          (identifier)
          (expression
            (primary
              (string))))
        (field_assignment
          (identifier)
          (expression
            (primary
              (string)))))
      (input_statement
        (duration)))
    (expect_block
      (expect_statement
        (comparison_operator)
        (number)))
    (options_block
      (option_entry
        (identifier)
        (identifier))
      (option_entry
        (identifier)
        (identifier))
      (option_entry
        (identifier)
        (identifier))
      (option_entry
        (identifier)
        (number)))))

==================
Two Stage Pipeline
==================

rule repeated_fail_bursts {
  events { e : auth_events && action == "failed" }
  match<sip,username:5m:fixed> {
    on event { e | count >= 1; }
    and close { burst: e | count >= 3; }
  }
  |> match<sip:30m:fixed> {
    on event { _in | count >= 1; }
    and close { users: _in.username | distinct | count >= 2; }
  } -> score(85.0)
  entity(ip, _in.sip)
  yield security_alerts (
    sip = _in.sip,
    fail_count = 2,
    message = fmt("{} multi-user fail bursts", _in.sip)
  )
}

---

(source_file
  (rule_declaration
    (identifier)
    (events_block
      (event_declaration
        (identifier)
        (identifier)
        (expression
          (binary_expression
            (expression
              (primary
                (field_reference
                  (identifier))))
            (comparison_operator)
            (expression
              (primary
                (string)))))))
    (rule_flow
      (stage_chain
        (non_scoring_stage
          (match_clause
            (match_params
              (field_reference
                (identifier))
              (field_reference
                (identifier))
              (window_spec
                (duration)))
            (on_event_block
              (match_step
                (step_branch
                  (source_expression
                    (identifier))
                  (pipe_chain
                    (measure)
                    (comparison_operator)
                    (primary
                      (number))))))
            (close_block
              (and_close_block
                (match_step
                  (step_branch
                    (identifier)
                    (source_expression
                      (identifier))
                    (pipe_chain
                      (measure)
                      (comparison_operator)
                      (primary
                        (number)))))))))
        (final_stage
          (match_clause
            (match_params
              (field_reference
                (identifier))
              (window_spec
                (duration)))
            (on_event_block
              (match_step
                (step_branch
                  (source_expression
                    (identifier))
                  (pipe_chain
                    (measure)
                    (comparison_operator)
                    (primary
                      (number))))))
            (close_block
              (and_close_block
                (match_step
                  (step_branch
                    (identifier)
                    (source_expression
                      (identifier)
                      (identifier))
                    (pipe_chain
                      (transform)
                      (measure)
                      (comparison_operator)
                      (primary
                        (number))))))))
          (score_call
            (expression
              (primary
                (number)))))))
    (entity_clause
      (identifier)
      (expression
        (primary
          (field_reference
            (identifier)
            (identifier)))))
    (yield_clause
      (yield_target
        (identifier))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (field_reference
              (identifier)
              (identifier)))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (number))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (function_call
              (identifier)
              (expression
                (primary
                  (string)))
              (expression
                (primary
                  (field_reference
                    (identifier)
                    (identifier)))))))))))

==================
Function Helpers
==================

rule helper_functions {
  events { e : auth_events && isnotnull(e.user) }
  on each e where is_blank(e.user) || contains(lower(e.action), "fail") -> score(round(clamp(70.5, 0, 100), 1))
  entity(ip, e.sip)
  yield alerts (
    created_time = now(),
    created_s = now_s(),
    created_ms = now_ms(),
    created_us = now_us(),
    created_ns = now_ns(),
    created_day = strftime(now(), "%Y-%m-%d"),
    normalized_user = default_if_blank(e.user, "unknown"),
    src = coalesce(null_if_blank(e.src), e.sip),
    missing = isnull(e.missing),
    action_md5 = md5(e.action),
    action_sha1 = sha1(e.action),
    action_sha256 = sha256(e.action),
    raw_hex = hex(e.raw),
    stable = stable_id("alert_", e.sip, e.user, e.event_time),
    parts = mvsort(mvdedup(split(trim(e.tags), ","))),
    joined = mvjoin(mvappend(e.sip, e.user), "|"),
    first_part = mvindex(split(e.tags, ","), 0)
  )
}

---

(source_file
  (rule_declaration
    (identifier)
    (events_block
      (event_declaration
        (identifier)
        (identifier)
        (expression
          (primary
            (function_call
              (identifier)
              (expression
                (primary
                  (field_reference
                    (identifier)
                    (identifier)))))))))
    (rule_flow
      (stage_chain
        (final_stage
          (each_clause
            (identifier)
            (expression
              (binary_expression
                (expression
                  (primary
                    (function_call
                      (identifier)
                      (expression
                        (primary
                          (field_reference
                            (identifier)
                            (identifier)))))))
                (expression
                  (primary
                    (function_call
                      (identifier)
                      (expression
                        (primary
                          (function_call
                            (identifier)
                            (expression
                              (primary
                                (field_reference
                                  (identifier)
                                  (identifier)))))))
                      (expression
                        (primary
                          (string)))))))))
          (score_call
            (expression
              (primary
                (function_call
                  (identifier)
                  (expression
                    (primary
                      (function_call
                        (identifier)
                        (expression
                          (primary
                            (number)))
                        (expression
                          (primary
                            (number)))
                        (expression
                          (primary
                            (number))))))
                  (expression
                    (primary
                      (number))))))))))
    (entity_clause
      (identifier)
      (expression
        (primary
          (field_reference
            (identifier)
            (identifier)))))
    (yield_clause
      (yield_target
        (identifier))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (function_call
              (identifier)))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (function_call
              (identifier)))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (function_call
              (identifier)))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (function_call
              (identifier)))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (function_call
              (identifier)))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (function_call
              (identifier)
              (expression
                (primary
                  (function_call
                    (identifier))))
              (expression
                (primary
                  (string)))))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (function_call
              (identifier)
              (expression
                (primary
                  (field_reference
                    (identifier)
                    (identifier))))
              (expression
                (primary
                  (string)))))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (function_call
              (identifier)
              (expression
                (primary
                  (function_call
                    (identifier)
                    (expression
                      (primary
                        (field_reference
                          (identifier)
                          (identifier)))))))
              (expression
                (primary
                  (field_reference
                    (identifier)
                    (identifier))))))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (function_call
              (identifier)
              (expression
                (primary
                  (field_reference
                    (identifier)
                    (identifier))))))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (function_call
              (identifier)
              (expression
                (primary
                  (field_reference
                    (identifier)
                    (identifier))))))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (function_call
              (identifier)
              (expression
                (primary
                  (field_reference
                    (identifier)
                    (identifier))))))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (function_call
              (identifier)
              (expression
                (primary
                  (field_reference
                    (identifier)
                    (identifier))))))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (function_call
              (identifier)
              (expression
                (primary
                  (field_reference
                    (identifier)
                    (identifier))))))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (function_call
              (identifier)
              (expression
                (primary
                  (string)))
              (expression
                (primary
                  (field_reference
                    (identifier)
                    (identifier))))
              (expression
                (primary
                  (field_reference
                    (identifier)
                    (identifier))))
              (expression
                (primary
                  (field_reference
                    (identifier)
                    (identifier))))))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (function_call
              (identifier)
              (expression
                (primary
                  (function_call
                    (identifier)
                    (expression
                      (primary
                        (function_call
                          (identifier)
                          (expression
                            (primary
                              (function_call
                                (identifier)
                                (expression
                                  (primary
                                    (field_reference
                                      (identifier)
                                      (identifier)))))))
                          (expression
                            (primary
                              (string)))))))))))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (function_call
              (identifier)
              (expression
                (primary
                  (function_call
                    (identifier)
                    (expression
                      (primary
                        (field_reference
                          (identifier)
                          (identifier))))
                    (expression
                      (primary
                        (field_reference
                          (identifier)
                          (identifier)))))))
              (expression
                (primary
                  (string)))))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (function_call
              (identifier)
              (expression
                (primary
                  (function_call
                    (identifier)
                    (expression
                      (primary
                        (field_reference
                          (identifier)
                          (identifier))))
                    (expression
                      (primary
                        (string))))))
              (expression
                (primary
                  (number))))))))))

==================
Structured Yield Values
==================

window security_alerts {
  fields {
    risk_context: object
    tags: array
    scores: array/float
    empty_tags: array
    ports: array/digit
  }
}

rule structured_output {
  events { e : auth_events }
  match<e.sip:5m> {
    on event { e | count >= 1; }
  } -> score(50.0)
  entity(ip, e.sip)
  yield security_alerts (
    risk_context = object {
      score: float = @score;
      source, src = e.sip;
      tags: array = array ["bruteforce", "ssh", e.action];
      ports: array/digit = array [22, 2222,];
      geo: object = object {
        country = e.country
      };
    },
    tags = array ["bruteforce", "ssh"],
    scores = array [@score, 1.5, 1],
    empty_tags = array [],
    ports = array [22, 2222,]
  )
}

---

(source_file
  (window_declaration
    (identifier)
    (fields_block
      (field_declaration
        (field_name
          (identifier))
        (field_type
          (object_type)))
      (field_declaration
        (field_name
          (identifier))
        (field_type
          (array_type)))
      (field_declaration
        (field_name
          (identifier))
        (field_type
          (array_type
            (base_type))))
      (field_declaration
        (field_name
          (identifier))
        (field_type
          (array_type)))
      (field_declaration
        (field_name
          (identifier))
        (field_type
          (array_type
            (base_type))))))
  (rule_declaration
    (identifier)
    (events_block
      (event_declaration
        (identifier)
        (identifier)))
    (rule_flow
      (stage_chain
        (final_stage
          (match_clause
            (match_params
              (field_reference
                (identifier)
                (identifier))
              (window_spec
                (duration)))
            (on_event_block
              (match_step
                (step_branch
                  (source_expression
                    (identifier))
                  (pipe_chain
                    (measure)
                    (comparison_operator)
                    (primary
                      (number)))))))
          (score_call
            (expression
              (primary
                (number)))))))
    (entity_clause
      (identifier)
      (expression
        (primary
          (field_reference
            (identifier)
            (identifier)))))
    (yield_clause
      (yield_target
        (identifier))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (object_expression
              (object_item
                (object_targets
                  (identifier))
                (field_type
                  (base_type))
                (expression
                  (primary
                    (derive_reference))))
              (object_item
                (object_targets
                  (identifier)
                  (identifier))
                (expression
                  (primary
                    (field_reference
                      (identifier)
                      (identifier)))))
              (object_item
                (object_targets
                  (identifier))
                (field_type
                  (array_type))
                (expression
                  (primary
                    (array_expression
                      (expression
                        (primary
                          (string)))
                      (expression
                        (primary
                          (string)))
                      (expression
                        (primary
                          (field_reference
                            (identifier)
                            (identifier))))))))
              (object_item
                (object_targets
                  (identifier))
                (field_type
                  (array_type
                    (base_type)))
                (expression
                  (primary
                    (array_expression
                      (expression
                        (primary
                          (number)))
                      (expression
                        (primary
                          (number)))))))
              (object_item
                (object_targets
                  (identifier))
                (field_type
                  (object_type))
                (expression
                  (primary
                    (object_expression
                      (object_item
                        (object_targets
                          (identifier))
                        (expression
                          (primary
                            (field_reference
                              (identifier)
                              (identifier)))))))))))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (array_expression
              (expression
                (primary
                  (string)))
              (expression
                (primary
                  (string)))))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (array_expression
              (expression
                (primary
                  (derive_reference)))
              (expression
                (primary
                  (number)))
              (expression
                (primary
                  (number)))))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (array_expression))))
      (named_argument
        (yield_field
          (identifier))
        (expression
          (primary
            (array_expression
              (expression
                (primary
                  (number)))
              (expression
                (primary
                  (number))))))))))

==================
yield preset declaration + invocation
==================

use "base.wfs"

yield preset base_alerts <severity, source = "wfusion"> (
    rule_name = @__wfu_rule_name,
    score = @score,
    severity = $severity,
    source = $source
)

rule scan {
    events { e : auth_events }
    on each e -> score(50.0)
    entity(ip, e.sip)
    yield scan_alerts : base_alerts<"high"> (
        alert_type = "scan",
        ioc_value = e.dip
    )
}

---

(source_file
  (use_declaration
    (string))
  (preset_declaration
    name: (identifier)
    (preset_param_list
      (preset_param
        name: (identifier))
      (preset_param
        name: (identifier)
        default: (preset_angle_value
          (string))))
    (named_argument
      name: (yield_field
        (identifier))
      value: (expression
        (primary
          (derive_reference))))
    (named_argument
      name: (yield_field
        (identifier))
      value: (expression
        (primary
          (derive_reference))))
    (named_argument
      name: (yield_field
        (identifier))
      value: (expression
        (primary
          (variable))))
    (named_argument
      name: (yield_field
        (identifier))
      value: (expression
        (primary
          (variable)))))
  (rule_declaration
    name: (identifier)
    (events_block
      (event_declaration
        alias: (identifier)
        window: (identifier)))
    (rule_flow
      (stage_chain
        (final_stage
          (each_clause
            alias: (identifier))
          (score_call
            (expression
              (primary
                (number)))))))
    (entity_clause
      type: (identifier)
      id: (expression
        (primary
          (field_reference
            object: (identifier)
            field: (identifier)))))
    (yield_clause
      (yield_target
        target: (identifier))
      (yield_preset_ref
        preset: (identifier)
        (preset_angle_value
          (string)))
      (named_argument
        name: (yield_field
          (identifier))
        value: (expression
          (primary
            (string))))
      (named_argument
        name: (yield_field
          (identifier))
        value: (expression
          (primary
            (field_reference
              object: (identifier)
              field: (identifier))))))))

==================
top-level list declaration
==================

blocked_ips = ("1.2.3.4", "5.6.7.8",)

rule check_ip {
    events { e : conn_events }
    on each e -> score(30.0)
    entity(ip, e.sip)
    yield out (sip = e.sip)
}

---

(source_file
  (list_declaration
    name: (identifier)
    (expression
      (primary
        (string)))
    (expression
      (primary
        (string))))
  (rule_declaration
    name: (identifier)
    (events_block
      (event_declaration
        alias: (identifier)
        window: (identifier)))
    (rule_flow
      (stage_chain
        (final_stage
          (each_clause
            alias: (identifier))
          (score_call
            (expression
              (primary
                (number)))))))
    (entity_clause
      type: (identifier)
      id: (expression
        (primary
          (field_reference
            object: (identifier)
            field: (identifier)))))
    (yield_clause
      (yield_target
        target: (identifier))
      (named_argument
        name: (yield_field
          (identifier))
        value: (expression
          (primary
            (field_reference
              object: (identifier)
              field: (identifier))))))))

==================
stats rule (declarative window stats)
==================

rule q12_bidder_count {
    events { b : bid_events }
    stats<10s:fixed> group by (b.bidder) {
        b | count as bid_count;
        b | avg(b.price) as avg_price;
        b | distinct_count(b.bidder) as uniq_bidders;
        b | last(b.url) as last_url where b.url != "";
        b | top(10, b.price) as top_prices;
    }
    entity(digit, b.bidder)
    yield out (
        id = b.bidder,
        detail = fmt("{}", b.bidder)
    )
}

---
